[package]
name = "duke"
# trusty
# mutt
version = "0.1.0"
authors = ["Chris Allen <cma@bitemyapp.com>"]

[dependencies]
futures = "0.1.14"
hyper = ">= 0.11"
hyper-tls = "0.1.1"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0.2"
tokio-core = "0.1.8"
elastic = "0.13.3"
elastic_derive = "0.13.3"
env_logger = "0.4.3"
log = "0.3.8"

[[test]]
name = "duke-test"
harness = false
path = "tests/main.rs"
